@@ -11,8 +11,7 @@ public class CurationAGM extends CurationObject {
     public AgmModel add(Strain s, Dao dao, String curie) throws Exception {
 
         AgmModel m = new AgmModel();
-        m.mod_entity_id = curie;
-        //m.mod_internal_id = curie;
+        m.primary_external_id = curie;
         m.name = s.getSymbol();
 
         // we call this to find malformed strain symbols
@@ -49,9 +48,8 @@ public class CurationAGM extends CurationObject {
         public String date_updated;
         public boolean internal = false;
 
-        // only one of these attributes can be submitted: mod_entity_id or mod_internal_id
-        public String mod_entity_id = null;
-        //public String mod_internal_id = null;
+        // as of Jan 22, 2025: mod_entity_id or mod_internal_id should not be used
+        public String primary_external_id = null;
 
         public String name;
         public Boolean obsolete = null;
