@@ -16,8 +16,8 @@ public class CurationVariant extends CurationObject {
     public VariantModel add(RgdVariant v, Dao dao, String curie) throws Exception {
 
         VariantModel m = new VariantModel();
-        m.mod_entity_id = curie;
-        //m.mod_internal_id = curie;
+        m.primary_external_id = curie;
+
         m.taxon_curie = "NCBITaxon:" + SpeciesType.getTaxonomicId(v.getSpeciesTypeKey());
         m.variant_type_curie = v.getType();
         m.data_provider_dto.setCrossReferenceDTO("RGD:"+v.getRgdId(), "allele", "RGD");
@@ -81,9 +81,8 @@ public class CurationVariant extends CurationObject {
         public String date_updated;
         public boolean internal = false;
 
-        // only one of these ids can be submitted: mod_entity_id or mod_internal_id
-        public String mod_entity_id = null;
-        //public String mod_internal_id = null;
+        // as of Jan 22, 2025: mod_entity_id or mod_internal_id should not be used
+        public String primary_external_id = null;
 
         public List note_dtos = null;
         public Boolean obsolete = null;
@@ -111,7 +110,7 @@ public class CurationVariant extends CurationObject {
         Collections.sort(list, new Comparator<VariantModel>() {
             @Override
             public int compare(VariantModel a1, VariantModel a2) {
-                return a1.mod_entity_id.compareToIgnoreCase(a2.mod_entity_id);
+                return a1.primary_external_id.compareToIgnoreCase(a2.primary_external_id);
             }
         });
     }
