@@ -1,3 +1,6 @@
+Feb 25, 2025
+  curation: mod_entity_id -> primary_external_id
+
 Dec 11, 2024
   curation: only one of the fields {fields mod_entity_id, mod_internal_id} can be submitted -- per request from the Alliance
      thus commented out 'mod_internal_id' field so it won't be part of the submission anymore
